Kustomize/apps/serviceA/serviceA-cluster-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serviceA
  name: servicea-cluster-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: serviceA
  type: ClusterIP
