Kustomize/apps/serviceA/serviceA-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serviceA
  name: servicea-nodeport-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 32001
  selector:
    app: serviceA
  type: NodePort
